Configure local DB connection and create test seed data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=arkham-horror-app
+spring.datasource.url=jdbc:postgresql://localhost:5432/arkham-horror-app
+spring.datasource.username=${ARKHAM_DB_USERNAME}
+spring.datasource.password=${ARKHAM_DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
